# agent

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  version.h.in
cmake/: FindOpenSSL.cmake
cmake/toolchain/: x86_64-w64-mingw32.cmake
src/: main.cpp
src/Core/: agent_core.cpp  agent_core.h  core_api.h  file.h  file_core.cpp  file_core.h
src/DB/: agentdb.cpp  agentdb.h  database.h  dbmanager.cpp  dbmanager.h
src/NetApi/: add_device_request.cpp  add_device_request.h  athena_request.cpp  athena_request.h  confirmation_request.cpp  confirmation_request.h  get_device_request.cpp  get_device_request.h  get_file_request.cpp  get_file_request.h  keepalive_request.cpp  keepalive_request.h  net_core.cpp  net_core.h  plugin_request.cpp  plugin_request.h  registration_request.cpp  registration_request.h  request.cpp  request.h  upload_file_request.cpp  upload_file_request.h
src/Plugin/: agentpluginapi.h  plugin.cpp  plugin.h  plugin_manager.cpp  plugin_manager.h
src/Settings/: athena_settings.cpp  athena_settings.h
src/SystemInfo/: system_info.cpp  system_info.h
